src/Components/preloader.css
.pace {
	-webkit-pointer-events: none;
	pointer-events: none;

	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
}

.pace .pace-progress {
	background: #101010;
	height: 100vh;
	width: 100%;
	position: fixed;
	z-index: 2000;
	top: 0;
	right: 0;

	-webkit-transform: translate3d(0, 0, 0) !important;
	-ms-transform: translate3d(0, 0, 0) !important;
	transform: translate3d(0, 0, 0) !important;
	transition: top 1s ease;
}

.pace .pace-progress::before {
	transform: translatex(50%) translateY(var(--progress-top, 0));
	opacity: var(--progress-opacity, 1);
	transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 1s cubic-bezier(0.19, 1, 0.22, 1);
	top: calc(50% - 70px);
	right: calc(50% + 5px);

	display: block;
	position: absolute;
	content:'' ;
	background-image: url(/llogo.png);
	width: 50px;
    height: 50px;
    background-repeat: no-repeat;
    background-position: center;
	text-align: center;
	/* transition: top 1.5s ease, opacity 1s ease ; */

}


.pace .pace-progress::after {
	transform: translatex(50%) translateY(var(--progress-top, 0));
	opacity: var(--progress-opacity, 1);
	transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1) 0.5s, opacity 1s cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
	top: 50%;
	right: 50%;
	display: block;
	position: absolute;
	content: attr(data-progress-text);
	font-weight: 100;
	font-size: 1rem;
	font-family: "MonumentRegular", 'MonumentUltrabold', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
	line-height: 1;
	text-align: center;
	color: rgb(255, 255, 255);

}

.pace-progress-inner {
	width: 0;
	height: 2px;
	background: white;
	transition: all 2.5s cubic-bezier(0.19, 1, 0.22, 1),
}

